Adding better login support email verification and register functionality