@@ -2,20 +2,17 @@ package org.bhargavguntupalli.tradingsandboxapi.security;
 
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
+import jakarta.servlet.http.Cookie;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.mock.web.MockHttpServletRequest;
 import org.springframework.mock.web.MockHttpServletResponse;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.core.userdetails.User;
-import org.springframework.security.core.userdetails.UserDetails;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -28,21 +25,18 @@ class JwtAuthenticationFilterTest {
     JwtProvider jwtProvider;
 
     @Mock
-    CustomUserDetailsService userDetailsService;
-
-    @Mock
     FilterChain filterChain;
 
-    @InjectMocks
     JwtAuthenticationFilter filter;
 
     @BeforeEach
     void setUp() {
         SecurityContextHolder.clearContext();
+        filter = new JwtAuthenticationFilter(jwtProvider);
     }
 
     @Test
-    void doFilter_NoAuthorizationHeader_ContinuesChain() throws ServletException, IOException {
+    void doFilter_NoTokenSource_ContinuesChain() throws ServletException, IOException {
         MockHttpServletRequest request = new MockHttpServletRequest();
         MockHttpServletResponse response = new MockHttpServletResponse();
 
@@ -65,7 +59,7 @@ class JwtAuthenticationFilterTest {
     }
 
     @Test
-    void doFilter_InvalidToken_ContinuesWithoutAuth() throws ServletException, IOException {
+    void doFilter_InvalidTokenFromHeader_ContinuesWithoutAuth() throws ServletException, IOException {
         MockHttpServletRequest request = new MockHttpServletRequest();
         request.addHeader("Authorization", "Bearer invalid-token");
         MockHttpServletResponse response = new MockHttpServletResponse();
@@ -79,7 +73,7 @@ class JwtAuthenticationFilterTest {
     }
 
     @Test
-    void doFilter_ValidToken_SetsAuthentication() throws ServletException, IOException {
+    void doFilter_ValidTokenFromHeader_SetsAuthentication() throws ServletException, IOException {
         MockHttpServletRequest request = new MockHttpServletRequest();
         request.addHeader("Authorization", "Bearer valid-token");
         MockHttpServletResponse response = new MockHttpServletResponse();
@@ -88,28 +82,60 @@ class JwtAuthenticationFilterTest {
         when(jwtProvider.getUsernameFromToken("valid-token")).thenReturn("testuser");
         when(jwtProvider.getRolesFromToken("valid-token")).thenReturn(List.of("ROLE_USER"));
 
-        UserDetails userDetails = new User("testuser", "password", Collections.emptyList());
-        when(userDetailsService.loadUserByUsername("testuser")).thenReturn(userDetails);
+        filter.doFilterInternal(request, response, filterChain);
+
+        verify(filterChain).doFilter(request, response);
+        var auth = SecurityContextHolder.getContext().getAuthentication();
+        assertThat(auth).isNotNull();
+        assertThat(auth.getName()).isEqualTo("testuser");
+    }
+
+    @Test
+    void doFilter_ValidTokenFromCookie_SetsAuthentication() throws ServletException, IOException {
+        MockHttpServletRequest request = new MockHttpServletRequest();
+        request.setCookies(new Cookie("jwt", "cookie-token"));
+        MockHttpServletResponse response = new MockHttpServletResponse();
+
+        when(jwtProvider.validateToken("cookie-token")).thenReturn(true);
+        when(jwtProvider.getUsernameFromToken("cookie-token")).thenReturn("cookieuser");
+        when(jwtProvider.getRolesFromToken("cookie-token")).thenReturn(List.of("ROLE_USER"));
 
         filter.doFilterInternal(request, response, filterChain);
 
         verify(filterChain).doFilter(request, response);
-        assertThat(SecurityContextHolder.getContext().getAuthentication()).isNotNull();
-        assertThat(SecurityContextHolder.getContext().getAuthentication().getName()).isEqualTo("testuser");
+        var auth = SecurityContextHolder.getContext().getAuthentication();
+        assertThat(auth).isNotNull();
+        assertThat(auth.getName()).isEqualTo("cookieuser");
+    }
+
+    @Test
+    void doFilter_CookieTakesPriorityOverHeader() throws ServletException, IOException {
+        MockHttpServletRequest request = new MockHttpServletRequest();
+        request.setCookies(new Cookie("jwt", "cookie-token"));
+        request.addHeader("Authorization", "Bearer header-token");
+        MockHttpServletResponse response = new MockHttpServletResponse();
+
+        when(jwtProvider.validateToken("cookie-token")).thenReturn(true);
+        when(jwtProvider.getUsernameFromToken("cookie-token")).thenReturn("cookieuser");
+        when(jwtProvider.getRolesFromToken("cookie-token")).thenReturn(List.of("ROLE_USER"));
+
+        filter.doFilterInternal(request, response, filterChain);
+
+        var auth = SecurityContextHolder.getContext().getAuthentication();
+        assertThat(auth).isNotNull();
+        assertThat(auth.getName()).isEqualTo("cookieuser");
+        verify(jwtProvider, never()).validateToken("header-token");
     }
 
     @Test
     void doFilter_ValidToken_SetsCorrectAuthorities() throws ServletException, IOException {
         MockHttpServletRequest request = new MockHttpServletRequest();
-        request.addHeader("Authorization", "Bearer valid-token");
+        request.setCookies(new Cookie("jwt", "admin-token"));
         MockHttpServletResponse response = new MockHttpServletResponse();
 
-        when(jwtProvider.validateToken("valid-token")).thenReturn(true);
-        when(jwtProvider.getUsernameFromToken("valid-token")).thenReturn("admin");
-        when(jwtProvider.getRolesFromToken("valid-token")).thenReturn(List.of("ROLE_USER", "ROLE_ADMIN"));
-
-        UserDetails userDetails = new User("admin", "password", Collections.emptyList());
-        when(userDetailsService.loadUserByUsername("admin")).thenReturn(userDetails);
+        when(jwtProvider.validateToken("admin-token")).thenReturn(true);
+        when(jwtProvider.getUsernameFromToken("admin-token")).thenReturn("admin");
+        when(jwtProvider.getRolesFromToken("admin-token")).thenReturn(List.of("ROLE_USER", "ROLE_ADMIN"));
 
         filter.doFilterInternal(request, response, filterChain);
 
@@ -118,5 +144,32 @@ class JwtAuthenticationFilterTest {
         assertThat(auth.getAuthorities())
                 .extracting("authority")
                 .containsExactlyInAnyOrder("ROLE_USER", "ROLE_ADMIN");
+    }
+
+    @Test
+    void doFilter_InvalidCookieToken_ContinuesWithoutAuth() throws ServletException, IOException {
+        MockHttpServletRequest request = new MockHttpServletRequest();
+        request.setCookies(new Cookie("jwt", "expired-cookie"));
+        MockHttpServletResponse response = new MockHttpServletResponse();
+
+        when(jwtProvider.validateToken("expired-cookie")).thenReturn(false);
+
+        filter.doFilterInternal(request, response, filterChain);
+
+        verify(filterChain).doFilter(request, response);
+        assertThat(SecurityContextHolder.getContext().getAuthentication()).isNull();
+    }
+
+    @Test
+    void doFilter_OtherCookies_Ignored() throws ServletException, IOException {
+        MockHttpServletRequest request = new MockHttpServletRequest();
+        request.setCookies(new Cookie("session", "some-session"), new Cookie("tracking", "abc"));
+        MockHttpServletResponse response = new MockHttpServletResponse();
+
+        filter.doFilterInternal(request, response, filterChain);
+
+        verify(filterChain).doFilter(request, response);
+        assertThat(SecurityContextHolder.getContext().getAuthentication()).isNull();
+        verifyNoInteractions(jwtProvider);
     }
 }
